instruments/AIOUSB/Headers/AIOUSB.h

__declspec(dllimport) unsigned long DIO_Automap_ClearTable(unsigned long DeviceIndex);
__declspec(dllimport) unsigned long DIO_Automap_SetTable(unsigned long DeviceIndex, void *pMapTable, unsigned long *pMapTableBytes);
__declspec(dllimport) unsigned long DIO_Automap_AddEntry(unsigned long DeviceIndex, unsigned short *pMapEntry);
__declspec(dllimport) unsigned long DIO_Automap_SetTickDivisor(unsigned long DeviceIndex, unsigned char *pDivisor);
__declspec(dllimport) unsigned long DIO_PWM_Start(unsigned long DeviceIndex, void *pPWMTable, unsigned long *pPWMTableBytes);
__declspec(dllimport) unsigned long DIO_Latch_SetDivisor(unsigned long DeviceIndex, unsigned char *pDivisor);
__declspec(dllimport) unsigned long DIO_Latch_Reset(unsigned long DeviceIndex);
__declspec(dllimport) unsigned long DIO_Latch_Read(unsigned long DeviceIndex, unsigned char *pLowLatches, unsigned char *pHighLatches, unsigned char *pNoLatches, unsigned long *pLatchesBytes);
__declspec(dllimport) unsigned long DIO_Deb_SetConfig(unsigned long DeviceIndex, void *pDebTable, unsigned long *pDebTableBytes);
__declspec(dllimport) unsigned long DIO_Deb_ReadAll(unsigned long DeviceIndex, unsigned char *pDebData);
__declspec(dllimport) unsigned long DIO_CSA_DoSync(unsigned long DeviceIndex, double * BaseRateHz, double * DurAms, double * DurBms, double * DurCms);
__declspec(dllimport) unsigned long DIO_CSA_DebounceSet(unsigned long DeviceIndex, unsigned long DebounceCounts);
__declspec(dllimport) unsigned long DIO_CSA_DebounceReadAll(unsigned long DeviceIndex, void *pData);
__declspec(dllimport) unsigned long DAC_CSA_SetRangeLimits(unsigned long DeviceIndex, unsigned char *pData);
__declspec(dllimport) unsigned long DAC_CSA_ClearRangeLimits(unsigned long DeviceIndex);
__declspec(dllimport) unsigned long DACDIO_WriteAll(unsigned long DeviceIndex, unsigned short *pDACCounts, unsigned char *pDIOData);
__declspec(dllimport) unsigned long DACDirect(unsigned long DeviceIndex, unsigned short Channel, unsigned short Counts);
__declspec(dllimport) unsigned long DACMultiDirect(unsigned long DeviceIndex, void *pDACData, unsigned long DACDataCount);
__declspec(dllimport) unsigned long DACSetBoardRange(unsigned long DeviceIndex, unsigned long RangeCode);
__declspec(dllimport) unsigned long DACSetChannelCal(unsigned long DeviceIndex, unsigned long Channel, char *CalFileName);
__declspec(dllimport) unsigned long DACOutputProcess(unsigned long DeviceIndex, double *ClockHz, unsigned long NumSamples, unsigned short *SampleData);
__declspec(dllimport) unsigned long DACOutputOpen(unsigned long DeviceIndex, double *ClockHz);
__declspec(dllimport) unsigned long DACOutputClose(unsigned long DeviceIndex, unsigned long bWait);
__declspec(dllimport) unsigned long DACOutputCloseNoEnd(unsigned long DeviceIndex, unsigned long bWait);
__declspec(dllimport) unsigned long DACOutputFrame(unsigned long DeviceIndex, unsigned long FramePoints, unsigned short *FrameData);
__declspec(dllimport) unsigned long DACOutputFrameRaw(unsigned long DeviceIndex, unsigned long FramePoints, unsigned short *FrameData);
__declspec(dllimport) unsigned long DACOutputSetCount(unsigned long DeviceIndex, unsigned long NewCount);
__declspec(dllimport) unsigned long DACOutputStart(unsigned long DeviceIndex);
__declspec(dllimport) unsigned long DACOutputSetInterlock(unsigned long DeviceIndex, unsigned long bInterlock);
__declspec(dllimport) unsigned long DACOutputSetClock(unsigned long DeviceIndex, double *ClockHz);